[project]
name = "socket-security"
version = "0.1.0"
description = ""
authors = [{ name = "MijikHna" }]
requires-python = ">=3.7"

dependencies = [ "requests" ]

[project.optional-dependencies]
test = [
    "python-dotenv",
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
